ws-slo/apps/lldap/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  clusterIP: None
  ports:
    - name: ldap
      appProtocol: ldap
      port: 3890
      targetPort: ldap
    - name: http
      appProtocol: http
      port: 17170
      targetPort: http
  selector:
    app.kubernetes.io/instance: lldap
    app.kubernetes.io/name: lldap
