ws-slo/apps/lldap/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap
spec:
  rules:
    - backendRefs:
        - name: lldap
          port: 17170
